--- a/Sandy_20190417_Data_Q2/Sandy_20190417_Data_Q2.csproj
+++ b/Sandy_20190417_Data_Q2/Sandy_20190417_Data_Q2.csproj
@@ -130,7 +130,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Models\Model1.cs" />
+    <Compile Include="Models\Data.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
